@@ -70,7 +70,8 @@ public: // With description
 
   enum LineStyle {unbroken, dashed, dotted};
   enum ForcedDrawingStyle {wireframe, solid};
-
+  enum {fMinLineSegmentsPerCircle = 3};   // number of sides per circle
+  
   G4VisAttributes ();
   G4VisAttributes (const G4VisAttributes&);
   G4VisAttributes (G4bool visibility);
@@ -120,9 +121,11 @@ public: // With description
   G4bool          IsForceAuxEdgeVisible          () const;
   G4bool          IsForceLineSegmentsPerCircle   () const;
   G4int           GetForcedLineSegmentsPerCircle () const;
-  G4int           GetMinLineSegmentsPerCircle    () const;
   G4double        GetStartTime                   () const;
   G4double        GetEndTime                     () const;
+  static G4int    GetMinLineSegmentsPerCircle    () {
+    return fMinLineSegmentsPerCircle;
+  };
   // Returns an expendable copy of the G4AttValues...
   const std::vector<G4AttValue>* CreateAttValues () const;
   // Returns the orginal long life G4AttDefs...
@@ -141,7 +144,6 @@ private:
   G4bool    fForceAuxEdgeVisible;  // Force drawing of auxilary edges. 
   G4int fForcedLineSegmentsPerCircle;  // Forced lines segments per
                                        // circle.  <=0 means not forced.
-  G4int fMinLineSegmentsPerCircle; // number of sides per circle
   G4double fStartTime, fEndTime;   // Time range.
   const std::vector<G4AttValue>*     fAttValues;  // For picking, etc.
   const std::map<G4String,G4AttDef>* fAttDefs;    // Corresponding definitions.
