@@ -44,7 +44,6 @@ fForceDrawingStyle   (va.fForceDrawingStyle),
 fForcedStyle         (va.fForcedStyle),
 fForceAuxEdgeVisible (va.fForceAuxEdgeVisible),
 fForcedLineSegmentsPerCircle (va.fForcedLineSegmentsPerCircle),
-fMinLineSegmentsPerCircle (va.fMinLineSegmentsPerCircle),
 fStartTime           (va.fStartTime),
 fEndTime             (va.fEndTime),
 // AttValues are created afresh for each object (using the
@@ -66,7 +65,6 @@ fForceDrawingStyle   (false),
 fForcedStyle         (wireframe),
 fForceAuxEdgeVisible (false),
 fForcedLineSegmentsPerCircle (0),  // <=0 means not forced.
-fMinLineSegmentsPerCircle (3),
 fStartTime           (-DBL_MAX),
 fEndTime             (DBL_MAX),
 fAttValues           (0),
@@ -83,7 +81,6 @@ fForceDrawingStyle   (false),
 fForcedStyle         (wireframe),
 fForceAuxEdgeVisible (false),
 fForcedLineSegmentsPerCircle (0),  // <=0 means not forced.
-fMinLineSegmentsPerCircle (3),
 fStartTime           (-DBL_MAX),
 fEndTime             (DBL_MAX),
 fAttValues           (0),
@@ -100,7 +97,6 @@ fForceDrawingStyle   (false),
 fForcedStyle         (wireframe),
 fForceAuxEdgeVisible (false),
 fForcedLineSegmentsPerCircle (0),  // <=0 means not forced.
-fMinLineSegmentsPerCircle (3),
 fStartTime           (-DBL_MAX),
 fEndTime             (DBL_MAX),
 fAttValues           (0),
@@ -118,7 +114,6 @@ fForceDrawingStyle   (false),
 fForcedStyle         (wireframe),
 fForceAuxEdgeVisible (false),
 fForcedLineSegmentsPerCircle (0),  // <=0 means not forced.
-fMinLineSegmentsPerCircle (3),
 fStartTime           (-DBL_MAX),
 fEndTime             (DBL_MAX),
 fAttValues           (0),
@@ -141,7 +136,6 @@ G4VisAttributes& G4VisAttributes::operator= (const G4VisAttributes& rhs)
   fForcedStyle         = rhs.fForcedStyle;
   fForceAuxEdgeVisible = rhs.fForceAuxEdgeVisible;
   fForcedLineSegmentsPerCircle = rhs.fForcedLineSegmentsPerCircle;
-  fMinLineSegmentsPerCircle = rhs.fMinLineSegmentsPerCircle,
   fStartTime           = rhs.fStartTime;
   fEndTime             = rhs.fEndTime;
   // AttValues are created afresh for each object (using the
@@ -162,7 +156,7 @@ const std::vector<G4AttValue>* G4VisAttributes::CreateAttValues () const {
 }
 
 void G4VisAttributes::SetForceLineSegmentsPerCircle (G4int nSegments) {
-  const G4int nSegmentsMin = 12;
+  const G4int nSegmentsMin = fMinLineSegmentsPerCircle;
   if (nSegments > 0 && nSegments < nSegmentsMin) {
     nSegments = nSegmentsMin;
     G4cout <<
@@ -191,7 +185,7 @@ std::ostream& operator << (std::ostream& os, const G4VisAttributes& a) {
     default: os << "unrecognised"; break;
     }
     os << ", line width: " << a.fLineWidth;
-    os << ", min line segments per circle: " << a.fMinLineSegmentsPerCircle;
+    os << ", min line segments per circle: " << a.GetMinLineSegmentsPerCircle();
     os << "\n  drawing style: ";
     if (a.fForceDrawingStyle) {
       os << "forced to: ";
@@ -244,7 +238,6 @@ G4bool G4VisAttributes::operator != (const G4VisAttributes& a) const {
       (fForceDrawingStyle  != a.fForceDrawingStyle)  ||
       (fForceAuxEdgeVisible!= a.fForceAuxEdgeVisible)||
       (fForcedLineSegmentsPerCircle != a.fForcedLineSegmentsPerCircle) ||
-      (fMinLineSegmentsPerCircle != a.fMinLineSegmentsPerCircle) ||
       (fStartTime          != a.fStartTime)          ||
       (fEndTime            != a.fEndTime)            ||
       (fAttValues          != a.fAttValues)          ||
